--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -34,7 +34,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Алгебра}
-\author{Кабашный Иван\\ (по материалам конспекта старшекурсников, \\ написанном на основе лекций В. А. Петрова)}
+\author{Кабашный Иван\\ \\ (по материалам конспекта старшекурсников, \\ написанном на основе лекций В. А. Петрова,\\ а также других источников)}
 \date{22 января 2020 г.}
 
 \theoremstyle{indented}
@@ -58,10 +58,12 @@
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\chard}{char}
 \DeclareMathOperator{\CC}{\mathbb{C}}
+\DeclareMathOperator{\ZZ}{\mathbb{Z}}
 \DeclareMathOperator{\RR}{\mathbb{R}}
 \DeclareMathOperator{\NN}{\mathbb{N}}
 \DeclareMathOperator{\codim}{codim}
 \DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\ord}{ord}
 
 \begin{document}
 
@@ -1551,7 +1553,7 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
 А так как ранг есть размерность образа, то $\dim \Ker A = n - \rank A$. Но вообще, это не очень-то и важно, а просто как вспомогательный факт. Нам же нужно научиться понимать, есть ли решения у системы, и, если есть, то как их находить.\ 
 
-Если у нас имеется $Ax=b$, то можно домножить это уравнение на некую квадратную матрицу $P \Rightarrow PAx=Pb$, где $P$ - обратимая матрица, чтобы не потерять никакой информации, то есть, она выражается через трансвекции. Так как мы умножаем слева, то по сути, мы решаем систему ''школьным методом'' - комбинирование строк. Приводим матрицу к ступенчатому виду, причём лучше сразу привести матрицу к \hypertarget{n64}{\textcolor{red}{\textit{расширенному виду}}}, то есть, к матрице $A$ приписать справа столбец $b$ и производить все операции сразу на такой расширенной матрице. Тогда если мы получили, что в части только с $А$ есть нулевые строчки, которые равны каким-то ненулевым значениям в столбце $b$, то мы получили противоречие, решений нет. Иначе рассмотрим последнюю ненулевыю строку, для всех переменных кроме одной выберем произвольные значения (параметры), а последнее будет задано тогда однозначно. И так дальше будем подниматься по строчкам, получим решение всей системы.\\
+Если у нас имеется $Ax=b$, то можно домножить это уравнение на некую квадратную матрицу $P \Rightarrow PAx=Pb$, где $P$ - обратимая матрица, чтобы не потерять никакой информации, то есть, она выражается через трансвекции. Так как мы умножаем слева, то по сути, мы решаем систему ''школьным методом'' - комбинирование строк. Приводим матрицу к ступенчатому виду, причём лучше сразу привести матрицу к \hypertarget{n64}{\textcolor{red}{\textit{расширенному виду}}}, то есть, к матрице $A$ приписать справа столбец $b$ и производить все операции сразу на такой расширенной матрице. Тогда если мы получили, что в части только с $A$ есть нулевые строчки, которые равны каким-то ненулевым значениям в столбце $b$, то мы получили противоречие, решений нет. Иначе рассмотрим последнюю ненулевыю строку, для всех переменных кроме одной выберем произвольные значения (параметры), а последнее будет задано тогда однозначно. И так дальше будем подниматься по строчкам, получим решение всей системы.\\
 
 Перед тем, как дорешать систему, мы пришли как раз к теореме Кронекера-Капелли, так как как раз количество ведущих элементов равно рангу, и если в матрице $A$ и в матрице расширенной количество ведущих совпадает, то и противоречия с последними ненулевыми строками не будет. Иначе, оно появляется, и только в таком случае система решений не имеет.
 
@@ -1569,15 +1571,325 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
 \subsection{Определение группы. Циклическая группа. Порядок элемента}
 
+\begin{defn}
+    \hypertarget{n66}{\textcolor{red}{\textit{Группой}}} называется множество $G$, если на нём задана операция $\cdot$ со следующими свойствами:\ 
+
+    \begin{itemize}
+        \item ассоциативность;
+        \item существование нейтрального элемента (e);
+        \item существование обратного элемента.
+    \end{itemize}
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n67}{\textcolor{red}{\textit{Подгруппой}}} $H$ группы $G$ называется её подмножество, замкнутое относительно операции и содержащее нейтральный элемент и обратный для каждого элемента группы.
+\end{defn}
+
+В любой группе $G$ могут быть определены \textit{степени} элемента $g$ с целыми показателями. Вместе они образуют подгруппу, которая называется \hypertarget{n68}{\textcolor{red}{\textit{циклической подгруппой}}}, порождённой элементом $g$. Обозначается она как $\langle g \rangle$. Возможны два случая при рассмотрении такой группы: либо она бесконечна (такое, конечно, бывает), либо конечна, то есть, существует такие натуральные $k,l:g^k=g^l\Leftrightarrow g^{k-l}=e$. Наименьшее из таких чисел $m$, что $g^m=e$, называют \hypertarget{n69}{\textcolor{red}{\textit{порядком}}} элемента $g$ и обозначают как $\ord g$.
+
+\begin{defn}
+    Группа $G$ называется \hypertarget{n70}{\textcolor{red}{\textit{циклической}}}, если существует такой элемент $g\in G$, что $G=\langle g \rangle$. Всякий такой элемент называется \hypertarget{n71}{\textcolor{red}{\textit{порождающим}}} элементом группы $G$.
+\end{defn}
+
+\resetall
+
 \subsection{Группа перестановок. Циклы, транспозиции. Знак перестановки}
+
+Любую перестановку $\pi$ можно явно записать, как биекцию, например:
+
+\begin{equation*}
+    \begin{pmatrix}
+        1 & 2 & \cdots & n \\
+        \pi(1) & \pi(2) & \cdots & \pi(n)
+    \end{pmatrix}
+\end{equation*}\
+
+Вообще, можно сказать, что мы рассматриваем множество $X$, и множество биекций из него самого в себя: $\{\varphi: X\rightarrow X \vert \varphi \text{ - биекция}\}:=S_X$. Тогда $S_X$ - группа по композиции с нейтральным элементом - тождественным отображением. Такая группа и называется \hypertarget{n72}{\textcolor{red}{\textit{группой перестановок}}} или симметрической группой.\ 
+
+С другой стороны, можно рассмтреть некоторую точку $i$ и её \textit{орбиту} под действием $\pi$:
+\[
+    (i, \pi(i), \pi(\pi(i)), \dots).
+\]
+Этот путь является циклом, потому что если бы он замкнулся на отличной от $i$ точке $j$, то у $j$ было бы два прообраза. То есть, всю перестановку можно представить в виде дизъюнктного объединения таких орбит. Если говорить строго, то можно определить отношение эквивалентности и по нему отфакторизовать:
+\[
+    i\sim j \Leftrightarrow \exists x\in \ZZ : \pi^k(i)=j.
+\]
+
+\begin{defn}
+    Пусть  $\pi$ - перестановка. $i$ нахывается \hypertarget{n73}{\textcolor{red}{\textit{неподвижной точкой}}} $\pi$, если $\pi(i)=i$. Множество всех неподвижных точек обозначается за $\text{Fix} \pi$. Аналогично определяется множество \textit{подвижных точек}: $\text{Mob}\pi$.
+\end{defn}
+
+\begin{defn}
+    Две перестановки \textit{независимы}, если множества их подвижных точек дизъюнктны.
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n74}{\textcolor{red}{\textit{Транспозиция}}} - цикл длины 2.
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n75}{\textcolor{red}{\textit{Фундаментальная транспозиция}}} - цикл вида $(i, i+1)$ для некоторого $i$.
+\end{defn}
+
+\begin{defn}
+    Пусть $\pi$ - перестановка. \hypertarget{n76}{\textcolor{red}{\textit{Инверсия}}} - пара $ (i, j)$ такая, что $i<j\wedge \pi(i)>\pi(j)$. Число таких пар обозначается за $\text{Inv} \pi$
+\end{defn}
+
+\begin{lemma}
+    При домножении перестановки $\pi$ на транспозицию $s_k=(k,k+1)$ количество инверсий меняется на 1: $\text{inv}(s_k\pi)=\text{inv}(\pi)±1$.
+\end{lemma}
+
+\begin{proof}
+    Пусть $i,j\in\{1,\dots,n\}, i<j$. В ходе решения нужно рассмотреть 4 случая:\ 
+
+    \begin{itemize}
+        \item $\{ \pi(i), \pi(j)\}\cap \{k,k+1\}=\emptyset $. В этом никакие инверсии не появляются и не пропадают, у $\pi$ и $s_k\pi$ количество инверсий совпадает.
+        \item $i=\pi^{-1}(k), j\neq\pi^{-1}(k+1)$. В этом случае также не появляются и не исчезают никакие перестановки.
+        \item $i=\pi^{-1}(k+1), j\neq\pi^{-1}(k)$. Аналогичен предыдущему.
+        \item Наконец, $\{ \pi(i), \pi(j)\} = \{k,k+1\}=\emptyset $. Здесь как раз появляется разница в количестве инверсий. При $i=\pi^{-1}(k), j=\pi^{-1}(k+1)$, то количество инверсий увеличивается на 1, а если наоборот - то уменьшается на 1.
+    \end{itemize}
+\end{proof}
+
+Таким образом, \\
+
+\begin{lemma}
+    При домножении $\pi$ на транспозицию $\sigma_k=(k, k+1)$, количество инверсий меняется на 1:
+
+
+$$        
+        \text{inv}(s_k\pi) =
+$$
+$$
+        \begin{cases}
+            \text{inv}(\pi)+1, \text{ если }\pi^{-1}(x)<\pi^{-1}(k+1),\\
+            \text{inv}(\pi)-1, \text{ если }\pi^{-1}(x)>\pi^{-1}(k+1).
+        \end{cases}
+$$        
+
+
+\end{lemma}
+
+\begin{theorem}
+    Любую перестановку можно представить в виде произведения фундаментальных транспозиций.
+\end{theorem}
+
+\begin{proof}
+    Пусть $\pi\in S_n$. Будем домножать $\pi$ слева на фундаментальные перестановки так, чтобы $\text{inv}(\pi)$ уменьшалась. В какой-то момент количество инверсий станет равным нулю, значит, перестановка будет тождественной. Получим выражение для исходной перестановки $\pi$ в виде произведения фундаментальных транспозиций. \ 
+
+    Итак, доказываем индукцией по количеству инверсий. База $\text{inv}(\pi)=0$ - это случай тождественной перестановки, для неё, очевидно, утверждение теоремы выполняется. Далее, пусть имеется перестановка $\pi\in S_n$.Мы хотим найти такую транспозицию $s_k$, что $\text{inv}(s_k\pi)=\text{inv}(\pi)-1$. По утверждению предыдущей леммы это то же самое, что найти $k:\pi^{-1}(k)>\pi^{-1}(k+1)$. Если такого $k$ нет, то $\pi^{-1}:\{1, \dots, n\}\rightarrow\{1, \dots, n\}$ - биекция, сохраняющая порядок. Такая биекция существует всего одна и это тождественная перстановка. Таким образом, если $\pi$ не тождественна: то мы нашли требуемое $k$, тогда
+    \[
+        s_k\pi=s_{i_1}\cdot\dots\cdot s_{i_m},
+    \]
+    следовательно, 
+    \[
+        \pi=s_k\cdots s_{i_1}\cdot\dots\cdot s_{i_m}.
+    \]
+    Что и требовалось.
+\end{proof}
+
+\begin{defn}
+    \textit{Гомоморфизмом} \hypertarget{n77}{\textcolor{red}{\textit{знака}}} будем называть отображение $\text{sgn}: S_n\rightarrow \{±1\}$, действующее по правилу $\text{sgn}(\pi)=(-1)^{\text{inv}(\pi)}$.
+\end{defn}
+
+\resetall
 
 \subsection{Действие группы на множестве. Орбиты. Классы сопряженности}
 
+Пусть $G$ - группа, $X$ - множество, $\varphi :G\rightarrow S_X$ - гомоморфизм. Чтобы задать этот гомоморфизм, для каждой пары $(g, x), g\in G, x\in X$, нужно определить значение $\varphi (g)(x)\in X$. Обозначим $g\cdot x:=\varphi(g)(x)$. \ 
+
+Для новой операции $G\times X\rightarrow X, (g, x)\rightarrow g\cdot x$, зная, что $\varphi$ - гомоморфизм, выведем для неё некоторые аксиомы: \ 
+
+\begin{itemize}
+    \item $(gh)\cdot x=g\cdot (hx)$, так как $\varphi (gh)(x)=\varphi(g)\varphi(h)(x)$. ($\forall g, h\in G, x\in X$), 
+    \item $e\cdot x=x$, потому что $\varphi(e)(x)=x$. ($\forall x\in X$).
+\end{itemize}
+
+\begin{defn}
+    Операция $G\times X\rightarrow X$, удовлетворяющая аксиомам выше, называется \hypertarget{n78}{\textcolor{red}{\textit{действием группы на множестве}}}.
+\end{defn}
+
+\begin{exl}
+    Приведём несколько примеров действий над группами:\ 
+
+    \begin{itemize}
+        \item Группа $G$ действует на множестве $G$ \hypertarget{n79}{\textcolor{red}{\textit{сдвигами}}} (такое действие называют регулярным): операция переводит пару $(g, x)\in G^2$ в $g\cdot x$. Посмотрим, как описать это действие на языке гомоморфизмов. Пусть $\varphi: G \rightarrow S_g$ - гомоморфизм, который задаёт регулярно едействие на группе. Заметим, что $\varphi$ - инъекция. Действительно, пусть $g\in \Ker \varphi$. Значит, $\varphi(g)$ - тождественная перестановка $G$, то есть, $\varphi(g)(h)=g\cdot h = h$ для всех $h$. В частности, если подставить $h=e$, то получим равенство $g=e$. Получается, ядро тривиально. Из того, что $\varphi$ - вложение, следует такая теорема:\\
+        
+        \begin{theorem}
+            (\hypertarget{n80}{\textcolor{red}{\textit{Теорема Кэли}}}). Любая конечная группа изоморфна некоторой подгруппе в $S_n$ для $n=\vert G\vert$.
+        \end{theorem}
+
+        \item Группа $G$ действует на себя \hypertarget{n81}{\textcolor{red}{\textit{сопряжениями}}}: $(g, h)\mapsto ghg^{-1}$.
+
+    \end{itemize}
+\end{exl}
+
+Пусть группа $G$ действует на множестве $X$. Определим на $X$. Определим на $X$ бинарное отношение, это отношение эквивалентности (нетрудно проверить): 
+\[
+    x\equiv y, \text{ если }\exists g\in G:y=g\cdot x.
+\]
+
+\begin{defn}
+    Классы эквивалентности отношения $\equiv$ называются \hypertarget{n82}{\textcolor{red}{\textit{орбитами}}}.
+\end{defn}
+
+\begin{defn}
+    Если группа $G$ действует на множестве $X$, и у $X$ всего одна орбита, то такое действуие называют \textit{транзитивным}.
+\end{defn}
+
+\begin{defn}
+    Орбиты относительно действия $G$ на $G$ сопряжением называют \hypertarget{n83}{\textcolor{red}{\textit{классами сопряжённости}}}.
+\end{defn}
+
+\resetall
+
 \subsection{Группа обратимых элементов кольца. Вычисление обратимых элементов $\mathbb{Z}/_{n\mathbb{Z}}$. Функция Эйлера}
+
+\begin{defn}
+    Множество всех обратимых элементов кольца образует мультипликативную группу, называемую \hypertarget{n84}{\textcolor{red}{\textit{группой обратимых элементов}}}. Эта группа всегда непустая, так как содержит, как минимум, единицу. Обозначается $R^\times$.
+\end{defn}
+
+Пусть $R$ - коммутативное кольцо с $1$, $R^{\times}$ - множество обратимых элементов, тогда $(R^\times, \cdot)$ - абелева группа. Можно проверить, что $((\ZZ /n \ZZ)^{\times}, \cdot)$ - абелева группа порядка $\varphi(n)$, где $\varphi$ - \hypertarget{n85}{\textcolor{red}{\textit{функция Эйлера}}}, сопоставляющая числу $n$ количество взаимно простых с ним среди $\{1, \dots, n\}$ (то есть, $\varphi(1)=1$).\\
+
+По поводу вычисления можно сказать, что их количество мы знаем из функции Эйлера, а также подходят только взаимно простые, так как иначе элемент необратим.
+
+\resetall
 
 \subsection{Гомоморфизмы и изоморфизмы групп. Смежные классы, теорема Лагранжа. Теорема Эйлера}
 
+\begin{defn}
+    \hypertarget{n86}{\textcolor{red}{\textit{Гомоморфизм}}} групп - отображение $\varphi$ между группами со свойствами:\ 
+
+    \begin{itemize}
+        \item $\varphi(ab)=\varphi(a)\varphi(b)$;
+        \item $\varphi(1)=1$ (не обязательное условие, оно выводится).
+    \end{itemize}
+
+    А \textit{изоморфизм}, естественно, биективный гомоморфизм.
+\end{defn}
+
+\begin{lemma}
+    $\varphi(a^{-1})=(\varphi(a))^{-1}$.
+\end{lemma}
+
+\begin{defn}
+    Подгруппа $H\leq G$ называется \hypertarget{n87}{\textcolor{red}{\textit{нормальной}}}, если 
+    \[
+        \forall h\in H, \forall g\in G: g^{-1}hg\in H.
+    \]
+    Иначе говоря, нормальные подгруппы - те, которые \textit{устойчивы} относительно сопряжения.
+\end{defn}
+
+\begin{lemma}
+    Ядро гомоморфизма групп - нормальная подгруппа.
+\end{lemma}
+
+\begin{proof}
+    $\varphi(g^{-1}hg)=(\varphi(g))^{-1}\varphi(h)\varphi(g)=(\varphi(g))^{-1}\varphi(g)$.
+\end{proof}
+
+Пусть $H$ - подгруппа $G$. Введём следующее отношение (эквивалентности, что нетрудно проверить) на $G$:
+\[
+    x\sim y \Leftrightarrow x^{-1}y\in H
+\]
+Иначе говоря, $g_2=g_1\cdot h, h\in H$.
+
+Можно видеть, что класс эквивалентности элемента $x$ состоит из произведений вида $hx, g\in H$. То есть, его корректно отображать за $Hx$. Классы эквивалентности по нашему определению имею специальное название:
+
+\begin{defn}
+    Пусть $H$ - подгруппа $G$, $x$ - элемент $G$. Множество $Hx$ называется \textit{правым} \hypertarget{n88}{\textcolor{red}{\textit{смежным классом}}} $x$ по подгруппе $H$. Множество всех правых смежных классов по подгруппе $H$ обозначается за $H\backslash G$, а левых - за $G/H$.
+\end{defn}
+
+\begin{lemma}
+    На самом деле, число правых смежных классов по подгруппе равно числу левых смежных классов.
+\end{lemma}
+
+\begin{defn}
+    Пусть $H$ - подгруппа $G$. \hypertarget{n89}{\textcolor{red}{\textit{Индексом}}} $G$ по $H$ называется число смежных классов $G$ по $H$. Обозначается как $\vert G:H\vert$. 
+\end{defn}
+
+\begin{theorem}
+    (\hypertarget{n90}{\textcolor{red}{\textit{Теорема Лагранжа}}}). Пусть $H$ - подгруппа конечной группы $G$. Тогда $\vert G\vert = \vert G:H\vert \cdot \vert H \vert$.
+\end{theorem}
+
+\begin{proof}
+    Пусть 
+    \[
+        C:=\{gH\vert g\in G\}
+    \]
+    - множество левых смежных классов по $H$. Построим явную биекцию между $G$ и $C\times H$. Выберем каждому смежному классу представитель $x$ и отобразим
+    \[
+        (x, h)\mapsto xh
+    \]
+    \textit{Сюръективность}. Если $x$ - представитель смежного класса $gH$, то $(x, x^{-1}g)$ будет прообразом $g$.\ 
+
+    \textit{Инъективность}. Если $x_1h_1=x_2h_2$, то $x_2^{-1}x_1=h_2h_1^{-1}$. Значит, $x_2$ и $x_1$ лежат в одном классе эквивалентности, а у каждого из последних представитель всего один: $x_1=x_2$. То есть, предпоследнее равенство приводится к виду $1=h_2h_1^{-1}$.
+\end{proof}
+
+\begin{cons}
+    Порядок любой группы делит порядок надгруппы.
+\end{cons}
+
+\begin{theorem}
+    (\hypertarget{n91}{\textcolor{red}{\textit{Теорема Эйлера}}}). Пусть натуральные числа $a$ и $n$ взаимно просты, то есть, $\gcd(n,a)=1$. Тогжа верно тождество $a^{\varphi(n)}\equiv 1 \mod n$, где $\varphi(n)$ - фугкция Эйлера.
+\end{theorem}
+
+\begin{proof}
+    Применим теорема Лагранжа к группе $(\ZZ/n\ZZ)^\times$. Обозначем её за $A$. $A$ состоит из вычетов, взаимно простых с $n$, поэтому $\vert A\vert=\varphi(n)$. К тому же, раз $a$ и $n$ взаимно просты, $[a]$ лежит в $A$. Пусть $C$ - подгруппа, порождённая $[a]$. Как мы уже выяснили ранее, размер $C$ равен порядку $[a]$. Кроме того, из теоремы Лагранжа следует, что $\vert C\vert |\vert A\vert$, то есть, $\text{Ord}([a])\vert \vert A\vert$. По определению порядка, $[a]^{\text{Ord}(a)}=1$, значит, $[a]^{\vert A\vert}=[a]^{\varphi(n)}=1$, что и требовалось.
+\end{proof}
+
+\resetall
+
 \subsection{Многочлены деления круга}
+
+Циклическую группу из $n$ элементов мы обозначаем как $C_n$.
+
+\begin{defn}
+    Если представить $C_n$ как комплексные корни из единицы степени $n$ с произведением, то образующие называются \hypertarget{n92}{\textcolor{red}{\textit{первообразными}}} корнями.
+\end{defn}
+
+\begin{defn}
+    Зафиксируем $n$. \hypertarget{n93}{\textcolor{red}{\textit{Многочлен деления круга}}} (\textit{циклотомический} многочлен) - многочлен вида 
+    \[
+        \Phi_n(x):=\Pi_\zeta(x-\zeta), 
+    \]
+    где произведение берётся по первообразным корням из единицы степени $n$.
+\end{defn}
+
+\begin{cons}
+    Из 28 билета: $\deg \Phi_n(x)=\varphi(x)$.
+\end{cons}
+
+\begin{theorem}
+    \textcolor{white}{fuck}\
+
+    \begin{itemize}
+        \item $x^n-1=\Pi_{d\vert n}\Phi_d(x)$ при всех $n$.
+        \item Все $\Phi_n(x)$ имеют целые коэффициенты.
+        \item Содержание всех $\Phi_n(x)$ (как элементов $\ZZ [x]$) равен 1.
+    \end{itemize}
+\end{theorem}
+
+\begin{proof}
+    \textit{Первый пункт}. Если мы покажем, что корни многочленов справа и слева совпадают с точностью до кратности, то равенство будет следовать из совпадения старших коэффициентов. Это и покажем\ 
+
+    \begin{itemize}
+        \item Пусть $\zeta$ - корень многослена слева. $\zeta$ будет порождать циклическую группу порядка $\text{Ord} \zeta$, а по минимальности порядка $\text{Ord}\zeta\vert n$ (так как $\zeta^n=1$). Значит, $\zeta$ содержится в разложении многочлена справа.
+        \item Пусть $\zeta$ - корень многочлена справа. Тогда $\zeta^n=1$, поскольку, $\zeta$ - первообразный корень с порядкам $d$ для некоторого $d\vert n$.
+        \item При этом, если $\zeta$ - корень $\Phi_d$, то $\zeta$ не может быть корнем другого циклотомического многочлена $\Phi_{d'}$ c $d\neq d'$, поскольку $\text{Ord}\zeta=d\neq d'$. Таким образом, любой корень правого многочлена имеет кратность 1. То же верно для левого.
+    \end{itemize}
+    
+    Первый пункт доказан.\ 
+
+    Индукция по $n$. База: $\Phi_1=x-1$ - многочлен с содержанием 1. Переход: используя предположение индукции, разложим правую часть как $\Phi_n\cdot g$ для некоторого многочлена $g$ с целыми коэффициентами и содержанием 1. Мы в области целостности, поэтому можем сократить обе части на $g$. При этом справа останется то, что осталось бы при делении $x^n-1$ на $g$ с остатком в $\mathbb{Q}[x]$ (вспомним определение деления с остатком). А останется, конечно, многочлен с рациональными клэффициентами. С другой стороны, это $\Phi_n$. Поскольку содержание $x^n-1$ - единица и содержание мультипликативно, содержание $\Phi_n$ - тоже единица. Значит, его коэффициенты целые и взаимно просты в совокупности. Что и требовалось.
+\end{proof}
+
+\begin{cons}
+    \[
+        n=\sum_{d\vert n}\varphi(d).
+    \]
+\end{cons}
+
+\resetall
 
 \subsection{Конечные поля (существование, единственность, цикличность мультипликативной группы)}
 
@@ -1612,13 +1924,23 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
     
     \hyperlink{n4}{ассоциированность}\
 
-    \hyperlink{n45}{базис}
+    \hyperlink{n45}{базис}\
 
     \hyperlink{n61}{ведущие элементы}\
 
     \hyperlink{n46}{векторное пространство}\
 
     \hyperlink{n19}{гомоморфизм}\
+
+    \hyperlink{n86}{гомоморфизм групп}\
+
+    \hyperlink{n66}{группа}\
+
+    \hyperlink{n84}{группа обратимых}\
+
+    \hyperlink{n72}{группа перестановок}\
+
+    \hyperlink{n78}{действие группы}\
     
     \hyperlink{n3}{делитель нуля}\
 
@@ -1626,13 +1948,21 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n54}{замена базиса}\
 
+    \hyperlink{n77}{группа перестановок}\
+
     \hyperlink{n9}{идеал}\
 
     \hyperlink{n22}{изоморфизм}\
 
+    \hyperlink{n76}{инверсия}\
+
+    \hyperlink{n89}{индекс}\
+
     \hyperlink{n35}{интерполяция по Лагранжу}\
 
     \hyperlink{n36}{интерполяция по Эрмиту}\
+
+    \hyperlink{n83}{класс сопряжённости}\
     
     \hyperlink{n1}{кольцо, а также его вариации}\
 
@@ -1656,9 +1986,17 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n27}{многочлен}\
 
+    \hyperlink{n93}{многочлен деления круга}\
+
+    \hyperlink{n72}{неподвижная точка}\
+
     \hyperlink{n7}{неприводимые}\
 
     \hyperlink{n6}{НОД}\
+
+    \hyperlink{n87}{нормальная подгруппа}\
+
+    \hyperlink{n2}{область целостности}\
 
     \hyperlink{n21}{образ}\
 
@@ -1670,7 +2008,11 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n52}{относительный базис}\
 
-    \hyperlink{n2}{область целостности}\
+    \hyperlink{n82}{орбита}\
+
+    \hyperlink{n92}{первообразные}\
+
+    \hyperlink{n67}{подгруппа}\
 
     \hyperlink{n49}{подмодуль}\
 
@@ -1684,6 +2026,10 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n56}{полный ранг}\
 
+    \hyperlink{n71}{порождающий элемент}\
+
+    \hyperlink{n69}{порядок элемента}\
+
     \hyperlink{n8}{простые}\ 
 
     \hyperlink{n58}{псевдоотражение}\
@@ -1696,11 +2042,17 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n63}{расширенный вид матрицы}\
 
+    \hyperlink{n79}{сдвиг}\
+
     \hyperlink{n44}{система образующих}\
 
     \hyperlink{n62}{СЛУ}\
 
+    \hyperlink{n88}{смежный класс}\
+
     \hyperlink{n30}{содержание}\
+
+    \hyperlink{n81}{сопряжение}\
 
     \hyperlink{n23}{сравнимость}\
 
@@ -1712,9 +2064,17 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n64}{теорема Кроненера-Капелли}\
 
+    \hyperlink{n80}{теорема Кэли}\
+
+    \hyperlink{n90}{теорема Лагранжа}\
+
     \hyperlink{n25}{теорема о гомоморфизме}\
 
+    \hyperlink{n91}{теорема Эйлера}\
+
     \hyperlink{n57}{трансвекция}\
+
+    \hyperlink{n74}{транспозиция}\
 
     \hyperlink{n33}{универсальное св-во кольца мн-ч}\
 
@@ -1727,6 +2087,14 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
     \hyperlink{n12}{факториальность}\
 
     \hyperlink{n24}{фактор-кольцо}\
+
+    \hyperlink{n75}{фундаментальная транспозиция}\
+
+    \hyperlink{n85}{функция Эйлера}\
+
+    \hyperlink{n68}{циклическая подгруппа}\
+
+    \hyperlink{n67}{циклическая группа}\
 
     \hyperlink{n59}{элементарные преобразования}\
 
